# pyfastcdc

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py
.github/workflows/: build.yml  ci.yml  package.yml  test.yml
fastcdc2020/: __init__.py  common.py  utils.py
fastcdc2020/cy/: __init__.py  constants.pxd  fastcdc.pyi  fastcdc.pyx
fastcdc2020/py/: __init__.py  constants.py  fastcdc.py
pyfastcdc/: __init__.py  __init__.pyi  common.py  utils.py
pyfastcdc/cy/: __init__.py  chunk.pxd  chunk.pyi  chunk.pyx  constants.pyx  fastcdc.pyi  fastcdc.pyx
pyfastcdc/py/: __init__.py  chunk.py  constants.py  fastcdc.py
scripts/: benchmark.py  benchmark_result_visualizer.py  generate_gear_table.py
tests/: conftest.py  test_arguments.py  test_correctness.py  test_performance.py  utils.py
