[build-system]
# https://setuptools.pypa.io/en/latest/userguide/index.html
requires = ["setuptools >= 59.0.0", "cython"]
build-backend = "setuptools.build_meta"

[project]
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#dynamic-metadata
dynamic = ["version", "readme", "dependencies", "optional-dependencies"]

name = "fastcdc2020"
description = "FastCDC 2020 implementation in Python"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Fallen_Breath" },
]
readme = "README.md"

classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/Fallen-Breath/fastcdc2020-py"

[tool.setuptools.dynamic]
version = { attr = "fastcdc2020.__version__" }
readme = { file = ["README.md"], content-type = "text/markdown" }
dependencies = { file = ["requirements.txt"] }
optional-dependencies.dev = { file = ["requirements.dev.txt"] }

[tool.setuptools.packages.find]
include = ["fastcdc2020*"]
namespaces = false
